examples/errors/go_fiber_panic_observe.mgo
package main

import "time"

func fail() {
	panic("worker failed")
}

func main() {
	go fail()

	// go fiber 的 panic 会直接让整个 VM 执行失败。
	time.Sleep(1)
}
